fix carousel read more flicker

--- a/sass/carousel.scss
+++ b/sass/carousel.scss
@@ -269,5 +269,6 @@
     font-weight: 400;
     line-height: 20px; /* Approximation due to font substitution */
     text-align: left;
+    width: 73px;
   }
 }
